Hobby page added

--- a/Site Portfolio/hobby.html
+++ b/Site Portfolio/hobby.html
@@ -36,6 +36,77 @@
 
 <!--Navigatiebalk-->
 
+<!--4 kolommen / 4 cards-->
+
+<div class="rounded-3 bg-secondary m-3 p-3">
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <section class="py-4 py-xl-5">
+                <div class="container">
+                    <div class="text-center">
+                        <h1 class="fw-bold mb-4">Mijn Hobbies</h1>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <div class="row mb-3 bg-secondary">
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Gaming</h4>
+                <a href="https://www.steam.com">
+                  <p class="text-center ptext">
+                    <img src="img/steam.png" class="img-fluid">
+                  </p>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Coding</h4>
+                <a href="https://code.visualstudio.com/">
+                  <p class="text-center ptext">
+                    <img src="img/vscode.png" class="img-fluid">
+                  </p>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Running</h4>
+                <a href="https://www.strava.com/athletes/62853084">
+                  <p class="text-center ptext">
+                    <img src="img/running.png" class="img-fluid">
+                  </p>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Music</h4>
+                <a href="https://soundcloud.com/hungry-music/nto-la-cle-des-champs">
+                  <p class="text-center ptext">
+                    <img src="img/nto.png" class="img-fluid">
+                  </p>
+                </a>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+
+<!--4 kolommen / 4 cards-->
+
+
 <!--Footer-->
 
 <footer class="footer mt-auto py-3 rounded-3 text-center bg-secondary m-3">
