--- a/Site Portfolio/hobby.html
+++ b/Site Portfolio/hobby.html
@@ -56,7 +56,7 @@
           <div class="card">
             <div class="card-body">
               <h4 class="card-title text-center">Gaming</h4>
-                <a href="https://www.steam.com">
+                <a href="https://store.steampowered.com/">
                   <p class="text-center ptext">
                     <img src="img/steam.png" class="img-fluid">
                   </p>
